# inline_reference

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy_docs.yml  run_tests.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  rst_reference.rst  useage.rst
inline_reference/: __init__.py  inline_reference.py
tests/: test_integration.py
tests/roots/test-integration/: conf.py  expected.html  expected.tex  expected.txt  expected_crosspage.html  expected_crosspage.txt  index.rst  test.rst  test_crosspage.rst
