[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'inline_reference'
version = "0.1.0"
authors = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
maintainers = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
description = "Sphinx extension for creating cross-reference links to arbitrary inline text"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "sphinx >= 8.1.3",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.2",
]
docs = [
    "sphinx_rtd_theme >= 3.0.2",
]

[project.urls]
Repository = "https://github.com/pace-neutrons/inline_reference"